--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx}": "eslint --fix"
+    "./src/*.{ts,tsx}": [
+      "npm run eslint --fix",
+      "npm run prettier --write ."
+    ]
   }
 }
