--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   },
   "lint-staged": {
     "./src/*.{ts,tsx}": [
-      "npm run eslint --fix",
+      "npm run eslint",
       "npm run prettier --write ."
     ]
   }
