--- a/package.json
+++ b/package.json
@@ -71,8 +71,7 @@
   "lint-staged": {
     "./src/*.{ts,tsx}": [
       "npm run lint:fix",
-      "npm run prettier --write .",
-      "git add"
+      "npm run prettier --write ."
     ]
   }
 }
